# polars-map

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: build.yml  release.yml
polars_map/: __init__.py  _col.py  _conv.py  _dtype.py  _expr.py  _series.py  _utils.py
tests/: __init__.py  conftest.py  test_col.py  test_construction.py  test_conv.py  test_expr.py  test_series.py
