[project]
name = "polars-map"
version = "0.0.0"
description = "Polars plugin providing Map operations on List(Struct({key, value})) columns"
requires-python = ">=3.10"
dependencies = ["polars>=1.13.0"]

[dependency-groups]
dev = ["pyright>=1.1.402", "pytest>=8.3.5", "pytest-cov>=7.1.0", "ruff>=0.11.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I", "D", "A", "B", "W", "PL", "UP", "FIX"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
include = ["polars_map", "tests"]
strict = ["polars_map", "tests"]
