[project]
name = "polars-map"
version = "0.1.1"
description = "Polars plugin providing Map operations on List(Struct({key, value})) columns"
requires-python = ">=3.10"
dependencies = ["polars>=1.36"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/hafaio/polars-map"
Repository = "https://github.com/hafaio/polars-map"
Issues = "https://github.com/hafaio/polars-map/issues"

[dependency-groups]
dev = ["pyright>=1.1", "pytest>=8.3", "pytest-cov>=7.1", "ruff>=0.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I", "D", "A", "B", "W", "PL", "UP", "FIX"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
include = ["polars_map", "tests"]
strict = ["polars_map", "tests"]
venvPath = "."
venv = ".venv"
